--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@iconify-json/arcticons": "^1.1.102",
+    "@iconify-json/devicon": "^1.1.40",
+    "@iconify-json/devicon-plain": "^1.1.39",
+    "@iconify-json/skill-icons": "^1.1.8",
+    "@iconify/tailwind": "^1.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
