feat: 支持多域名部署

--- a/.github/workflows/deploy-page.yml
+++ b/.github/workflows/deploy-page.yml
@@ -39,7 +39,7 @@ jobs:
           node-version: 18.18.2
       - run: npm i -g pnpm
       - run: pnpm i
-      - run: pnpm build
+      - run: pnpm build:github
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
