--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build:github": "env-cmd -f .env.github next build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
